fixed overflow out body element

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,15 @@ body {
         (var(--background-first-color)) 10px,
         (var(--background-second-color)) 10px,
         (var(--background-second-color)) 20px
-        );
+    );
+    margin: 0;
+    padding: 0;
+
+    overflow-x: hidden;
+}
+
+#root {
+    width: 100%;
 }
 
 .divider {
@@ -23,9 +31,11 @@ body {
 }
 
 .app {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border: none;
 }
 
 // Animations 
